[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://ctwabcdef01234" path="res://scenes/desktop/tool_window.tscn" id="1_tw"]
[ext_resource type="Script" path="res://scenes/tools/software_shop.gd" id="2_ss"]

[node name="SoftwareShop" instance=ExtResource("1_tw")]
custom_minimum_size = Vector2(480, 340)
script = ExtResource("2_ss")

[node name="Margin" type="MarginContainer" parent="ContentArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ContentArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NodeHeader" type="Label" parent="ContentArea/Margin/VBox"]
layout_mode = 2
text = "MARKETPLACE"

[node name="Sep" type="HSeparator" parent="ContentArea/Margin/VBox"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="ContentArea/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="ContentArea/Margin/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="StatusLabel" type="Label" parent="ContentArea/Margin/VBox"]
layout_mode = 2
text = ""
